--- a/Despliegue_2.ipynb
+++ b/Despliegue_2.ipynb
@@ -13,6 +13,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "73130a1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: streamlit in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.39.0)\n",
+      "Requirement already satisfied: altair<6,>=4.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (5.4.1)\n",
+      "Requirement already satisfied: blinker<2,>=1.0.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (1.8.2)\n",
+      "Requirement already satisfied: cachetools<6,>=4.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (5.5.0)\n",
+      "Requirement already satisfied: click<9,>=7.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (8.1.7)\n",
+      "Requirement already satisfied: numpy<3,>=1.20 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (1.26.4)\n",
+      "Requirement already satisfied: packaging<25,>=20 in c:\\users\\alfre\\appdata\\roaming\\python\\python312\\site-packages (from streamlit) (24.1)\n",
+      "Requirement already satisfied: pandas<3,>=1.4.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (2.2.2)\n",
+      "Requirement already satisfied: pillow<11,>=7.1.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (10.4.0)\n",
+      "Requirement already satisfied: protobuf<6,>=3.20 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (5.28.2)\n",
+      "Requirement already satisfied: pyarrow>=7.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (17.0.0)\n",
+      "Requirement already satisfied: requests<3,>=2.27 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (2.32.3)\n",
+      "Requirement already satisfied: rich<14,>=10.14.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (13.8.1)\n",
+      "Requirement already satisfied: tenacity<10,>=8.1.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (8.5.0)\n",
+      "Requirement already satisfied: toml<2,>=0.10.1 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (0.10.2)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.3.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (4.12.2)\n",
+      "Requirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (3.1.43)\n",
+      "Requirement already satisfied: pydeck<1,>=0.8.0b4 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (0.9.1)\n",
+      "Requirement already satisfied: tornado<7,>=6.0.3 in c:\\users\\alfre\\appdata\\roaming\\python\\python312\\site-packages (from streamlit) (6.4.1)\n",
+      "Requirement already satisfied: watchdog<6,>=2.1.5 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from streamlit) (4.0.2)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from altair<6,>=4.0->streamlit) (3.1.4)\n",
+      "Requirement already satisfied: jsonschema>=3.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from altair<6,>=4.0->streamlit) (4.23.0)\n",
+      "Requirement already satisfied: narwhals>=1.5.2 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from altair<6,>=4.0->streamlit) (1.8.4)\n",
+      "Requirement already satisfied: colorama in c:\\users\\alfre\\appdata\\roaming\\python\\python312\\site-packages (from click<9,>=7.0->streamlit) (0.4.6)\n",
+      "Requirement already satisfied: gitdb<5,>=4.0.1 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gitpython!=3.1.19,<4,>=3.0.7->streamlit) (4.0.11)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas<3,>=1.4.0->streamlit) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas<3,>=1.4.0->streamlit) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas<3,>=1.4.0->streamlit) (2024.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.27->streamlit) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.27->streamlit) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.27->streamlit) (2.2.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests<3,>=2.27->streamlit) (2024.7.4)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from rich<14,>=10.14.0->streamlit) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\alfre\\appdata\\roaming\\python\\python312\\site-packages (from rich<14,>=10.14.0->streamlit) (2.18.0)\n",
+      "Requirement already satisfied: smmap<6,>=3.0.1 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit) (5.0.1)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jinja2->altair<6,>=4.0->streamlit) (2.1.5)\n",
+      "Requirement already satisfied: attrs>=22.2.0 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (24.2.0)\n",
+      "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (2023.12.1)\n",
+      "Requirement already satisfied: referencing>=0.28.4 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.35.1)\n",
+      "Requirement already satisfied: rpds-py>=0.7.1 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from jsonschema>=3.0->altair<6,>=4.0->streamlit) (0.20.0)\n",
+      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from markdown-it-py>=2.2.0->rich<14,>=10.14.0->streamlit) (0.1.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\alfre\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: C:\\Users\\alfre\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Instalamos la libreria de STREAMLIT\n",
+    "!pip install streamlit"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "f77f8b2b",
    "metadata": {},
@@ -86,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "f92faabd",
    "metadata": {},
    "outputs": [
@@ -139,7 +208,69 @@
     "#Generamos las páginas que utilizaremos en el diseño\n",
     "##############################################################################\n",
     "#Generamos los encabezados para la barra lateral (sidebar)\n",
-    "st.sidebar.title(\"TITANIC\")"
+    "st.sidebar.title(\"TITANIC\")\n",
+    "#Widget 1: Selectbox\n",
+    "#Menu desplegable de opciones de laa páginas seleccionadas\n",
+    "View= st.sidebar.selectbox(label= \"Tipo de Análisis\", options= [\"Extracción de Características\", \n",
+    "                                              \"Regresión Lineal\", \"Regresión No Lineal\",\n",
+    "                                              \"Regresión Logística\"])\n",
+    "\n",
+    "# CONTENIDO DE LA VISTA 1\n",
+    "if View == \"Extracción de Características\":\n",
+    "    #EXTRACCIÓN DE CARACTERÍSTICAS\n",
+    "    #Select box\n",
+    "    Variable_Cat= st.sidebar.selectbox(label= \"Variables\", options= Lista)\n",
+    "    #Obtenemos las frecuencias de las categorías de la variable seleccionada\n",
+    "    Tabla_frecuencias = df[Variable_Cat].value_counts().reset_index()\n",
+    "    #Ajustamos los nombre de las cabeceras de las columnas\n",
+    "    Tabla_frecuencias.columns = ['categorias', 'frecuencia']\n",
+    "    \n",
+    "    #Generamos los encabezados para el dashboard\n",
+    "    st.title(\"Extracción de Características\")\n",
+    "    \n",
+    "    #Generamos el diseño del Layout deseado\n",
+    "    # Fila 1\n",
+    "    Contenedor_A, Contenedor_B = st.columns(2)\n",
+    "    with Contenedor_A: \n",
+    "        st.write(\"Grafico de Barras\")\n",
+    "        #GRAPH 1: BARPLOT\n",
+    "        #Despliegue de un bar plot, definiendo las variables \"X categorias\" y \"Y numéricas\" \n",
+    "        figure1 = px.bar(data_frame=Tabla_frecuencias, x='categorias', \n",
+    "                  y= 'frecuencia', title= str('Frecuencia por categoría'))\n",
+    "        figure1.update_xaxes(automargin=True)\n",
+    "        figure1.update_yaxes(automargin=True)\n",
+    "        figure1.update_layout(height=300)\n",
+    "        st.plotly_chart(figure1, use_container_width=True)\n",
+    "\n",
+    "    with Contenedor_B:\n",
+    "        st.write(\"Grafico de Pastel\")\n",
+    "        #GRAPH 2: PIEPLOT\n",
+    "        #Despliegue de un pie plot, definiendo las variables \"X categorias\" y \"Y numéricas\" \n",
+    "        figure2 = px.pie(data_frame=Tabla_frecuencias, names='categorias', \n",
+    "                  values= 'frecuencia', title= str('Frecuencia por categoría'))\n",
+    "        figure2.update_layout(height=300)\n",
+    "        st.plotly_chart(figure2, use_container_width=True)\n",
+    "\n",
+    "    # Fila 2\n",
+    "    Contenedor_C, Contenedor_D = st.columns(2)\n",
+    "    with Contenedor_C:\n",
+    "        st.write(\"Grafico de anillo o dona\")\n",
+    "        #GRAPH 3: DONUT PLOT\n",
+    "        #Despliegue de un line plot, definiendo las variables \"X categorias\" y \"Y numéricas\" \n",
+    "        figure3 = px.pie(data_frame=Tabla_frecuencias, names='categorias', \n",
+    "                  values= 'frecuencia', hole=0.4, title= str('Frecuencia por categoría'))\n",
+    "        figure3.update_layout(height=300)\n",
+    "        st.plotly_chart(figure3, use_container_width=True)\n",
+    "\n",
+    "    with Contenedor_D:  \n",
+    "        st.write(\"Grafico de area\")\n",
+    "        #GRAPH 4: AREA PLOT\n",
+    "        #Despliegue de un area plot, definiendo las variables \"X categorias\" y \"Y numéricas\" \n",
+    "        figure4 = px.area(data_frame=Tabla_frecuencias, x='categorias', \n",
+    "                  y= 'frecuencia', title= str('Frecuencia por categoría'))\n",
+    "        figure4.update_layout(height=300)\n",
+    "        st.plotly_chart(figure4, use_container_width=True)\n",
+    " ############################################################################"
    ]
   }
  ],
