--- a/Despliegue_2.ipynb
+++ b/Despliegue_2.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f92faabd",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,74 @@
     "                  y= 'frecuencia', title= str('Frecuencia por categoría'))\n",
     "        figure4.update_layout(height=300)\n",
     "        st.plotly_chart(figure4, use_container_width=True)\n",
-    " ############################################################################"
+    " ############################################################################\n",
+    " ###################################################################################\n",
+    " \n",
+    " # CONTENIDO DE LA VISTA 2\n",
+    "if View == \"Regresión Lineal\":\n",
+    "    #REGRESIÓN LINEAL SIMPLE \n",
+    "    #Generamos la lista de variables numéricas\n",
+    "    numeric_df = df.select_dtypes(['float','int'])  #Devuelve Columnas\n",
+    "    Lista_num= numeric_df.columns                   #Devuelve lista de Columnas numéricas\n",
+    "    #Select box\n",
+    "    Variable_y= st.sidebar.selectbox(label= \"Variable objetivo (Y)\", options= Lista_num)\n",
+    "    Variable_x= st.sidebar.selectbox(label= \"Variable independiente del modelo simple (X)\", options= Lista_num)    \n",
+    "    \n",
+    "    \n",
+    "    #Generamos los encabezados para el dashboard\n",
+    "    st.title(\"Regresión Lineal\")  \n",
+    "    \n",
+    "    #Generamos el diseño del Layout deseado\n",
+    "    # Fila 1\n",
+    "    Contenedor_A, Contenedor_B = st.columns(2)\n",
+    "    with Contenedor_A: \n",
+    "        st.write(\"Correlación Lineal Simple\")\n",
+    "      \n",
+    "        #Se define model como la función de regresión lineal\n",
+    "        from sklearn.linear_model import LinearRegression\n",
+    "        model= LinearRegression()\n",
+    "        #Ajustamos el modelo con las variables antes declaradas\n",
+    "        model.fit(X=df[[Variable_x]], y=df[Variable_y])\n",
+    "        #Predecimos los valores de la variable objetivo\n",
+    "        y_pred= model.predict(X=df[[Variable_x]])\n",
+    "        #Corroboramos cual es el coeficiente de Determinación de nuestro modelo\n",
+    "        coef_Deter_simple=model.score(X=df[[Variable_x]], y=df[Variable_y])\n",
+    "        #Corroboramos cual es el coeficiente de Correlación de nuestro modelo\n",
+    "        coef_Correl_simple=np.sqrt(coef_Deter_simple)\n",
+    "        #Mostramos el dataset\n",
+    "        st.write(coef_Correl_simple)\n",
+    "        \n",
+    "        #GRAPH 5: SCATTERPLOT\n",
+    "        figure5 = px.scatter(data_frame=numeric_df, x=Variable_x, y=Variable_y, \n",
+    "                     title= 'Modelo Lineal Simple')\n",
+    "        st.plotly_chart(figure5)\n",
+    "    \n",
+    "\n",
+    "    with Contenedor_B:\n",
+    "        st.write(\"Correlación Lineal Múltiple\")\n",
+    "        #Widget 3: Multiselect box\n",
+    "        #Generamos un cuadro de multi-selección (X) para seleccionar variables independientes\n",
+    "        Variables_x= st.sidebar.multiselect(label=\"Variables independientes del modelo múltiple (X)\", options= Lista_num)\n",
+    "        #Se define model como la función de regresión lineal\n",
+    "        from sklearn.linear_model import LinearRegression\n",
+    "        model_M= LinearRegression()\n",
+    "        #Ajustamos el modelo con las variables antes declaradas\n",
+    "        model_M.fit(X=df[Variables_x], y=df[Variable_y])\n",
+    "        #Predecimos los valores de la variable objetivo\n",
+    "        y_pred_M= model_M.predict(X=df[Variables_x])\n",
+    "        #Corroboramos cual es el coeficiente de Determinación de nuestro modelo\n",
+    "        coef_Deter_multiple=model_M.score(X=df[Variables_x], y=df[Variable_y])\n",
+    "        #Corroboramos cual es el coeficiente de Correlación de nuestro modelo\n",
+    "        coef_Correl_multiple=np.sqrt(coef_Deter_multiple)\n",
+    "        #Mostramos el coeficiente de correlación múltiple\n",
+    "        st.write(coef_Correl_multiple)\n",
+    "        \n",
+    "        #GRAPH 6: SCATTERPLOT\n",
+    "        figure6 = px.scatter(data_frame=numeric_df, x=Variables_x, y=Variable_y,\n",
+    "                     title= 'Modelo Lineal Múltiple')\n",
+    "        st.plotly_chart(figure6)\n",
+    "        \n",
+    " ####################################################################################"
    ]
   }
  ],
