--- a/Despliegue_2.ipynb
+++ b/Despliegue_2.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "f92faabd",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,228 @@
     "                     title= 'Modelo Lineal Múltiple')\n",
     "        st.plotly_chart(figure6)\n",
     "        \n",
-    " ####################################################################################"
+    " ####################################################################################ç\n",
+    " \n",
+    "  # CONTENIDO DE LA VISTA 3\n",
+    "if View == \"Regresión No Lineal\":\n",
+    "    #REGRESIÓN NO LINEAL \n",
+    "    #Generamos la lista de variables numéricas\n",
+    "    numeric_df = df.select_dtypes(['float','int'])  #Devuelve Columnas\n",
+    "    df_men= df[df[\"Sex\"] == \"male\"]\n",
+    "    df_women=df[df[\"Sex\"] == \"female\"]\n",
+    "    Lista_num= numeric_df.columns                   #Devuelve lista de Columnas numéricas\n",
+    "    #Select box\n",
+    "    Variable_y= st.sidebar.selectbox(label= \"Variable objetivo (Y)\", options= Lista_num)\n",
+    "    Variable_x= st.sidebar.selectbox(label= \"Variable independiente del modelo No lineal (X)\", options= Lista_num)   \n",
+    "    #Lista de modelos\n",
+    "    Lista_mod=[\"Función cuadrática\", \"Función exponencial\"]\n",
+    "    #Select box de modelos\n",
+    "    Modelo= st.sidebar.selectbox(label= \"Modelos No Lineales\", options= Lista_mod)  \n",
+    "\n",
+    "    #Generamos los encabezados para el dashboard\n",
+    "    st.title(\"Regresión No Lineal\")  \n",
+    "        \n",
+    "        \n",
+    "    #Generamos el diseño del Layout deseado\n",
+    "    # Fila 1\n",
+    "    Contenedor_A, Contenedor_B = st.columns(2)\n",
+    "    with Contenedor_A: \n",
+    "        st.write(\"Correlación No lineal Hombres\")\n",
+    "        #Redefinimos las variables \n",
+    "        x= df_men[Variable_x]\n",
+    "        y= df_men[Variable_y]\n",
+    "        \n",
+    "        #Declaración de MODELOS\n",
+    "        if Modelo == \"Función cuadrática\":\n",
+    "            def  func1 (x, a, b, c):\n",
+    "                return a*x**2 + b*x + c\n",
+    "            #Ajustamos los parámetros de la función curve_fit\n",
+    "            parametros, covs= curve_fit(func1, x, y)\n",
+    "            # Predicciones\n",
+    "            y_pred = func1(x, *parametros)\n",
+    "        \n",
+    "        if Modelo == \"Función exponencial\":\n",
+    "            def func2(x, a, b, c):\n",
+    "                return a*np.exp(-b*x)+c\n",
+    "            #Ajustamos los parámetros de la función curve_fit\n",
+    "            parametros, covs= curve_fit(func2, x, y)\n",
+    "            # Predicciones\n",
+    "            y_pred = func2(x, *parametros)\n",
+    "\n",
+    "        #Corroboramos cual es el coeficiente de Determinación de nuestro modelo\n",
+    "        coef_Deter = r2_score(y, y_pred) \n",
+    "        #Corroboramos cual es el coeficiente de Correlación de nuestro modelo\n",
+    "        coef_Correl=np.sqrt(coef_Deter)\n",
+    "        #Mostramos el dataset\n",
+    "        st.write(coef_Correl)\n",
+    "        \n",
+    "        #GRAPH 7: SCATTERPLOT\n",
+    "        figure7 = px.scatter(data_frame=df_men, x=Variable_x, y=Variable_y, \n",
+    "                     title= 'Modelo No Lineal para Hombres')\n",
+    "        st.plotly_chart(figure7)\n",
+    "        \n",
+    "\n",
+    "    with Contenedor_B: \n",
+    "        st.write(\"Correlación No lineal Mujeres\")\n",
+    "        #Redefinimos las variables \n",
+    "        x= df_women[Variable_x]\n",
+    "        y= df_women[Variable_y]\n",
+    "               #Declaración de MODELOS\n",
+    "        if Modelo == \"Función cuadrática\":\n",
+    "            def  func1 (x, a, b, c):\n",
+    "                 return a*x**2 + b*x + c\n",
+    "            #Ajustamos los parámetros de la función curve_fit\n",
+    "            parametros, covs= curve_fit(func1, x, y)\n",
+    "            # Predicciones\n",
+    "            y_pred = func1(x, *parametros)\n",
+    "    \n",
+    "        if Modelo == \"Función exponencial\":\n",
+    "            def func2(x, a, b, c):\n",
+    "                return a*np.exp(-b*x)+c\n",
+    "            #Ajustamos los parámetros de la función curve_fit\n",
+    "            parametros, covs= curve_fit(func2, x, y)\n",
+    "            # Predicciones\n",
+    "            y_pred = func2(x, *parametros)\n",
+    "\n",
+    " \n",
+    "        #Corroboramos cual es el coeficiente de Determinación de nuestro modelo\n",
+    "        coef_Deter = r2_score(y, y_pred) \n",
+    "        #Corroboramos cual es el coeficiente de Correlación de nuestro modelo\n",
+    "        coef_Correl=np.sqrt(coef_Deter)\n",
+    "        #Mostramos el dataset\n",
+    "        st.write(coef_Correl)\n",
+    "        \n",
+    "        #GRAPH 7: SCATTERPLOT\n",
+    "        figure8 = px.scatter(data_frame=df_women, x=Variable_x, y=Variable_y, \n",
+    "                     title= 'Modelo No Lineal para Mujeres')\n",
+    "        st.plotly_chart(figure8)\n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   ##########################################################################################3\n",
+    "        # CONTENIDO DE LA VISTA 4\n",
+    "if View == \"Regresión Logística\":\n",
+    "    #REGRESIÓN NO LINEAL \n",
+    "    #Generamos la lista de variables numéricas\n",
+    "    numeric_df = df.select_dtypes(['float','int'])  #Devuelve Columnas\n",
+    "    Lista_num= numeric_df.columns                   #Devuelve lista de Columnas numéricas\n",
+    "    Lista_dicot= ['Survived','Sex']                  #Devuelve lista de Columnas dicotómicas\n",
+    "    #Select box\n",
+    "    Variable_y= st.sidebar.selectbox(label= \"Variable dependiente (y)\", options= Lista_dicot)\n",
+    "    #Multi-select box\n",
+    "    Variables_x= st.sidebar.multiselect(label=\"Variables independientes del modelo logístico (X)\", options= Lista_num,\n",
+    "                                        default=['Fare'])  \n",
+    "\n",
+    "    #Generamos los encabezados para el dashboard\n",
+    "    st.title(\"Regresión Logística\")  \n",
+    "        \n",
+    "\n",
+    "\n",
+    "    #Generamos el diseño del Layout deseado\n",
+    "    # Fila 1\n",
+    "    Contenedor_A, Contenedor_B = st.columns(2)\n",
+    "    with Contenedor_A: \n",
+    "        st.write(\"Correlación Logística General\")\n",
+    "        #Redefinimos las variables \n",
+    "        X= df[Variables_x]\n",
+    "        y= df[Variable_y]\n",
+    "        \n",
+    "        #Dividimos el conjunto de datos en la parte de entrenamiento y prueba:\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state =None)\n",
+    "        \n",
+    "        #Se escalan todos los datos\n",
+    "        escalar = StandardScaler()\n",
+    "        \n",
+    "        #Para realizar el escalamiento de las variables “X” tanto de entrenamiento como de prueba, utilizaremos fit_transform\n",
+    "        X_train = escalar.fit_transform(X_train)\n",
+    "        X_test = escalar.transform(X_test)\n",
+    "\n",
+    "        #Definimos el algoritmo a utilizar\n",
+    "        from sklearn.linear_model import LogisticRegression\n",
+    "        algoritmo = LogisticRegression()\n",
+    "        \n",
+    "        #Entrenamos el modelo\n",
+    "        algoritmo.fit(X_train, y_train)\n",
+    "        \n",
+    "        #Para realizar el escalamiento de las variables “X” tanto de entrenamiento como de prueba, utilizaremos fit_transform\n",
+    "        X_train = escalar.fit_transform(X_train)\n",
+    "        X_test = escalar.transform(X_test)\n",
+    "        \n",
+    "        #Realizamos una predicción\n",
+    "        y_pred = algoritmo.predict(X_test) \n",
+    "        \n",
+    "        #Verifico la matriz de Confusión\n",
+    "        matriz = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "        # Etiquetas de los ejes\n",
+    "        clases=  np.unique(df[Variable_y])\n",
+    "        labels = [clases[0], clases[1]]\n",
+    "\n",
+    "        # Crear el heatmap\n",
+    "        figure9 = go.Figure(data=go.Heatmap(\n",
+    "            z=matriz,\n",
+    "            x=labels,\n",
+    "            y=labels,\n",
+    "            hoverinfo=\"z\",\n",
+    "            colorscale=\"Oranges\",\n",
+    "            showscale=True,\n",
+    "            zmin=0\n",
+    "        ))\n",
+    "\n",
+    "        # Añadir anotaciones con TP, TN, FP, FN\n",
+    "        annotations = []\n",
+    "        for i in range(matriz.shape[0]):\n",
+    "            for j in range(matriz.shape[1]):\n",
+    "                valor = matriz[i, j]\n",
+    "                if i == 0 and j == 0:\n",
+    "                    texto = f'TP: {valor}'\n",
+    "                elif i == 0 and j == 1:\n",
+    "                    texto = f'FP: {valor}'\n",
+    "                elif i == 1 and j == 0:\n",
+    "                    texto = f'FN: {valor}'\n",
+    "                elif i == 1 and j == 1:\n",
+    "                    texto = f'TN: {valor}'\n",
+    "                annotations.append(\n",
+    "                    dict(\n",
+    "                        x=labels[j],\n",
+    "                        y=labels[i],\n",
+    "                        text=texto,\n",
+    "                        showarrow=False,\n",
+    "                        font=dict(color=\"white\" if valor > matriz.max()/2 else \"black\")\n",
+    "                    )\n",
+    "                )\n",
+    "\n",
+    "        figure9.update_layout(\n",
+    "            title='Confusion Matrix',\n",
+    "            xaxis_title=\"Predicted\",\n",
+    "            yaxis_title=\"Actual\",\n",
+    "            annotations=annotations,\n",
+    "            width=500,\n",
+    "            height=500\n",
+    "        )\n",
+    "\n",
+    "        # Mostrar en Streamlit\n",
+    "        st.plotly_chart(figure9)\n",
+    "\n",
+    "        #Calculo la exactitud del modelo\n",
+    "        from sklearn.metrics import accuracy_score\n",
+    "        exactitud = accuracy_score(y_test, y_pred)\n",
+    "        #Mostramos la exactitud del modelo\n",
+    "        st.write(\"Exactitud del Modelo\")\n",
+    "        st.write(exactitud)\n",
+    "        #Calculo la precisión del modelo\n",
+    "        from sklearn.metrics import precision_score\n",
+    "        precision_0 = precision_score(y_test, y_pred, average=\"binary\", pos_label=clases[0])\n",
+    "        st.write(\"Precisión de la etiqueta:\", clases[0])\n",
+    "        st.write(precision_0)\n",
+    "        precision_1 = precision_score(y_test, y_pred, average=\"binary\", pos_label=clases[1])\n",
+    "        st.write(\"Precisión de la etiqueta:\", clases[1])\n",
+    "        st.write(precision_1)\n",
+    "        \n",
+    " ####################################################################################\n",
+    " \n",
+    " \n",
+    "        "
    ]
   }
  ],
